2015-07-07  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.8 released.

2015-07-06  Petasis George  <petasis@iit.demokritos.gr>
	* Makefile.in:
	* doc/tkDND.htm:
	* doc/tkDND.n:
	* macosx/macdnd.m:
	* unix/tkUnixSelect.c: Applied two patches from Andrew Murray,
	regarding various fixes (various typos and unused variable warnings
	under OS X).

2015-04-13  Petasis George  <petasis@iit.demokritos.gr>
	* library\tkdnd_generic.tcl: Fixed SF bug #30: Toplevel Widget Cannot
	Be Drop Target. Bug reported by Tim Tomkinson.

2015-03-04  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd.tcl: Added support in <<DragInitCmd>> & <<DragEndCmd>>
	for %x, %y mouse coordinates (relative to window that is the drag
	source). Added the ability to stop a drag on the drag source. The
	<<DragInitCmd>> binding must return either "refuse_drop"
	as a value (instead of a list), or use
	"return -code break"|"return -code continue".

2015-02-20  Petasis George  <petasis@iit.demokritos.gr>
	* unix/TkDND_XDND.c: Fixed a bug in converting Time to a Tcl object.
	Now Tcl_NewWideIntObj() is used, as Tcl_NewLongObj() could cause an
	overflow under some operating systems. Bug reported by Nicolas Bats,
	for OS X 10.7.

2014-11-26  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.7 released.

2014-10-07  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m:
	* library/tkdnd_macosx.tcl: Added support for DND_HTML in OS X.

	* library/tkdnd_unix.tcl: Added support for DND_HTML in XDND.

2014-09-21  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl: Changed implementation to re-use the
	generic implementation.

	* library/tkdnd_generic.tcl: Two new procedures,
	generic::GetWindowCommonTypes and generic::FindWindowWithCommonTypes.
	The last one tries to find a window that can accept the current drag.

	* unix/TkDND_XDND.c: Fixed a bug in getting the "accepted" field
	in XdndFinished.
